tests/compile-fail/integration_suite__integration__anm_features__meta_non_const.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: const expression required
   ┌─ <input>:28:22
   │
28 │     memory_priority: 3 * I0,
   │                      ^^^^^^ non-const expression


